samples/_failures_safe/1761345282_7f5fc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cee01e29.c: In function ‘main’:
./samples/SAFE/__tmp_cee01e29.c:174:5: error: expected declaration or statement at end of input
  174 |     printf("\nReverse order:\n");
      |     ^~~~~~
